# ThermoFrag

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: default.yaml  phase1_large.yaml  phase2.yaml  phase2_smoke.yaml  phase3.yaml  tf_pocket.yaml  tf_pocket_v3.yaml  tiny.yaml
notebooks/: 01_data_sanity.ipynb
results/eval/: claim_summary.json  (+4 more)
scripts/: aggregate_mm_gbsa.py  aggregate_validation.py  analyze_tf_pocket_v2.py  analyze_tf_pocket_v3.py  build_conditional_lmdb.py  build_crossdocked_lmdb.py  build_litpcba_targets.py  build_rxnflow_env.sh  build_zinc_fragments.py  compute_c1_druglike.py  decode_samples.py  diag_v2_on_phase4.py  diagnose_qm_offset.py  diagnose_qm_outliers.py  dock_nomu_ablation.py  dock_vina.py  dump_pocket_v3_litpcba.py  eval_c3_c4_c6_summary.py  eval_c3_vs_litpcba.py  eval_c6_unified.py  eval_chempot.py  eval_detailed_balance.py  eval_generator_vs_generator.py  eval_known_actives.py  eval_litpcba.py  eval_noqm_ablation.py  eval_ood_auroc.py  eval_ood_breakdown.py  eval_pareto.py  eval_prolif_poses.py  eval_properties.py  eval_qm.py  eval_strain.py  extract_poses.py  make_paper_figures.py  plot_fig2.py  plot_fig2_druglike.py  plot_fig2_mu_matrix.py  plot_fig3_qm_fidelity.py  plot_fig4_downstream_generation.py  (+33 more)
tests/: conftest.py  synth.py  test_anneal.py  test_conditional_mh.py  test_config.py  test_decoder.py  test_eval_qm.py  test_hamiltonian_smoke.py  test_langevin.py  test_mini_train.py  test_qm_smoke.py  test_qmugs_pipeline.py  test_spice_pipeline.py  test_trainer_coupling.py  test_trainer_joint.py  test_trainer_qm.py
(+3313 files in other folders)
