[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermofrag"
version = "0.0.1"
description = "Statistical-mechanical fragment-based 3D molecular generator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Wei Zhao" }]

dependencies = [
  "torch>=2.3",
  "numpy>=1.26",
  "scipy>=1.11",
  "rdkit>=2023.9",
  "pandas>=2.1",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "lmdb>=1.4",
  "h5py>=3.10",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
geom = [
  "torch-geometric>=2.5",
  "torch-scatter",
  "torch-cluster",
]
qm = [
  "ase>=3.22",
  "schnetpack>=2.0",
]
eval = [
  "openmm>=8.1",
  "openmmforcefields>=0.12",
  "openff-toolkit>=0.16",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.8",
  "ipykernel>=6.29",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"
